--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
         & li {
             justify-self: start;
             align-self: center;
+            padding-bottom: 3px;
 
 
             font-size: 16px;
@@ -97,6 +98,14 @@ body {
 
 
             cursor: pointer;
+
+            & a {
+                width: 100%;
+
+
+                text-decoration: none;
+                color: black;
+            }
         } 
 
         .active-link {
